--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 
-  <style>
+    <style>
         /* Profile Section */
         .profile-container {
             display: flex;
@@ -20,19 +20,12 @@
             flex-wrap: wrap;
         }
 
-        .profile-pic-container {
-            position: relative;
-            width: 400px;
-            height: 400px;
-        }
-
         .profile-pic {
             width: 400px;
             height: 400px;
             border-radius: 50%;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-            position: relative;
-            z-index: 1;
+            margin-bottom: 2rem;
         }
 
         .profile-text h1 {
@@ -78,27 +71,29 @@
             transform: scale(1.1);
         }
 
-        /* Skills Orbit */
-        .skills-orbit {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 500px; /* Orbit diameter */
-            height: 500px;
-            transform: translate(-50%, -50%);
-            z-index: 0;
+        /* Skills Ticker */
+        .skills-ticker-container {
+            width: 100%;
+            max-width: 1200px;
+            overflow: hidden;
+            margin-top: 1rem;
+        }
+
+        .skills-ticker {
+            display: flex;
+            animation: ticker 20s linear infinite;
+            white-space: nowrap;
         }
 
         .skill-item {
-            position: absolute;
-            width: 70px;
-            height: 70px;
+            flex: 0 0 auto;
+            width: 80px;
+            height: 80px;
             background-color: #f9f9f9;
             border-radius: 8px;
+            margin: 0 1rem;
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-            animation: fadeIn 1s ease-in forwards;
-            opacity: 0;
         }
 
         .skill-item img {
@@ -108,21 +103,19 @@
             padding: 8px;
         }
 
-        /* Position logos in a circle */
-        .skill-item:nth-child(1) { transform: rotate(0deg) translate(250px) rotate(0deg); animation-delay: 0.2s; }
-        .skill-item:nth-child(2) { transform: rotate(72deg) translate(250px) rotate(-72deg); animation-delay: 0.4s; }
-        .skill-item:nth-child(3) { transform: rotate(144deg) translate(250px) rotate(-144deg); animation-delay: 0.6s; }
-        .skill-item:nth-child(4) { transform: rotate(216deg) translate(250px) rotate(-216deg); animation-delay: 0.8s; }
-        .skill-item:nth-child(5) { transform: rotate(288deg) translate(250px) rotate(-288deg); animation-delay: 1.0s; }
-
         .skill-item:hover {
-            transform: scale(1.2) translate(250px); /* Maintain orbit position on hover */
+            transform: scale(1.2);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
         }
 
-        @keyframes fadeIn {
-            0% { opacity: 0; transform: translateY(15px) rotate(0deg); }
-            100% { opacity: 1; transform: translateY(0) rotate(0deg); }
+        @keyframes ticker {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-50%); }
+        }
+
+        /* Pause animation on hover */
+        .skills-ticker-container:hover .skills-ticker {
+            animation-play-state: paused;
         }
 
         /* Responsive design */
@@ -132,82 +125,56 @@
                 gap: 2rem;
             }
 
-            .profile-pic-container {
-                width: 250px;
-                height: 250px;
-            }
-
             .profile-pic {
-                width: 250px;
-                height: 250px;
-            }
-
-            .skills-orbit {
-                width: 350px;
-                height: 350px;
-            }
-
-            .skill-item {
-                width: 50px;
-                height: 50px;
-            }
-
-            .skill-item:nth-child(1) { transform: rotate(0deg) translate(175px) rotate(0deg); }
-            .skill-item:nth-child(2) { transform: rotate(72deg) translate(175px) rotate(-72deg); }
-            .skill-item:nth-child(3) { transform: rotate(144deg) translate(175px) rotate(-144deg); }
-            .skill-item:nth-child(4) { transform: rotate(216deg) translate(175px) rotate(-216deg); }
-            .skill-item:nth-child(5) { transform: rotate(288deg) translate(175px) rotate(-288deg); }
-
-            .skill-item:hover {
-                transform: scale(1.2) translate(175px);
+                width: 300px;
+                height: 300px;
             }
 
             .profile-text h1 {
-                font-size: 2.2rem;
+                font-size: 2.5rem;
             }
 
             .profile-text h2 {
-                font-size: 1.4rem;
+                font-size: 1.5rem;
             }
 
             .section-subtitle {
                 font-size: 1rem;
             }
+
+            .skill-item {
+                width: 60px;
+                height: 60px;
+                margin: 0 0.8rem;
+            }
         }
 
         @media (max-width: 500px) {
-            .profile-pic-container {
-                width: 200px;
-                height: 200px;
-            }
-
             .profile-pic {
                 width: 200px;
                 height: 200px;
             }
 
-            .skills-orbit {
-                width: 300px;
-                height: 300px;
+            .profile-text h1 {
+                font-size: 2rem;
+            }
+
+            .profile-text h2 {
+                font-size: 1.2rem;
             }
 
             .skill-item {
-                width: 40px;
-                height: 40px;
-            }
-
-            .skill-item:nth-child(1) { transform: rotate(0deg) translate(150px) rotate(0deg); }
-            .skill-item:nth-child(2) { transform: rotate(72deg) translate(150px) rotate(-72deg); }
-            .skill-item:nth-child(3) { transform: rotate(144deg) translate(150px) rotate(-144deg); }
-            .skill-item:nth-child(4) { transform: rotate(216deg) translate(150px) rotate(-216deg); }
-            .skill-item:nth-child(5) { transform: rotate(288deg) translate(150px) rotate(-288deg); }
-
-            .skill-item:hover {
-                transform: scale(1.2) translate(150px);
+                width: 50px;
+                height: 50px;
+                margin: 0 0.6rem;
             }
 
             .btn-container {
                 flex-direction: column;
+            }
+
+            .skills-ticker {
+                animation: ticker 15s linear infinite; /* Faster on mobile */
             }
         }
     </style>
@@ -261,26 +228,7 @@
 
 <section id="profile">
         <div class="profile-container">
-            <div class="profile-pic-container">
-                <img src="./assets/picofme (7).png" alt="Ambuj Nayan Mishra profile picture" class="profile-pic" />
-                <div class="skills-orbit">
-                    <div class="skill-item">
-                        <img src="./assets/python-logo.png" alt="Python Logo">
-                    </div>
-                    <div class="skill-item">
-                        <img src="./assets/pngwing.com (1).png" alt="SQL Logo">
-                    </div>
-                    <div class="skill-item">
-                        <img src="./assets/powerbi.png" alt="Power BI Logo">
-                    </div>
-                    <div class="skill-item">
-                        <img src="./assets/Pandas.png" alt="Pandas Logo">
-                    </div>
-                    <div class="skill-item">
-                        <img src="./assets/seaborn Logo Vector.png" alt="Seaborn Logo">
-                    </div>
-                </div>
-            </div>
+            <img src="./assets/picofme (7).png" alt="Ambuj Nayan Mishra profile picture" class="profile-pic" />
             <div class="profile-text">
                 <p class="section-subtitle">Hello, I'm</p>
                 <h1 class="section-title">Ambuj Nayan Mishra</h1>
@@ -300,9 +248,44 @@
                     </div>
                 </div>
             </div>
+            <div class="skills-ticker-container">
+                <div class="skills-ticker">
+                    <!-- First set of logos -->
+                    <div class="skill-item">
+                        <img src="./assets/python-logo.png" alt="Python Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/pngwing.com (1).png" alt="SQL Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/powerbi.png" alt="Power BI Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/Pandas.png" alt="Pandas Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/seaborn Logo Vector.png" alt="Seaborn Logo">
+                    </div>
+                    <!-- Duplicated set for seamless loop -->
+                    <div class="skill-item">
+                        <img src="./assets/python-logo.png" alt="Python Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/pngwing.com (1).png" alt="SQL Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/powerbi.png" alt="Power BI Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/Pandas.png" alt="Pandas Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/seaborn Logo Vector.png" alt="Seaborn Logo">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-
   <section id="about">
     <p class="section-subtitle">Get to Know More</p>
     <h2 class="section-title">About Me</h2>
