--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div class="skill-item">
                         <img src="./assets/seaborn Logo Vector.png" alt="Seaborn Logo">
                     </div>
-                    <!-- Duplicated set for seamless loop -->
+                    <!-- Duplicated set for seamless loop 
                     <div class="skill-item">
                         <img src="./assets/python-logo.png" alt="Python Logo">
                     </div>
@@ -281,7 +281,7 @@
                     </div>
                     <div class="skill-item">
                         <img src="./assets/seaborn Logo Vector.png" alt="Seaborn Logo">
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
