--- a/index.html
+++ b/index.html
@@ -266,6 +266,12 @@
                     <div class="skill-item">
                         <img src="./assets/seaborn Logo Vector.png" alt="Seaborn Logo">
                     </div>
+                    <div class="skill-item">
+                        <img src="./assets/excel (1).png" alt="Seaborn Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/github.png" alt="Seaborn Logo">
+                    </div>
                     <!-- Duplicated set for seamless loop 
                     <div class="skill-item">
                         <img src="./assets/python-logo.png" alt="Python Logo">
