--- a/index.html
+++ b/index.html
@@ -272,7 +272,12 @@
                     <div class="skill-item">
                         <img src="./assets/visual-studio.png" alt="Seaborn Logo">
                     </div>
-
+                   <div class="skill-item">
+                        <img src="./assets/looker2.png" alt="Seaborn Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/github.png" alt="Seaborn Logo">
+                    </div>
                     <!-- Duplicated set for seamless loop 
                     <div class="skill-item">
                         <img src="./assets/python-logo.png" alt="Python Logo">
