--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         <img src="./assets/visual-studio.png" alt="Seaborn Logo">
                     </div>
                    <div class="skill-item">
-                        <img src="./assets/looker2.png" alt="Seaborn Logo">
+                        <img src="./assets/google-looker-seeklogo.png" alt="Seaborn Logo">
                     </div>
                     <div class="skill-item">
                         <img src="./assets/github.png" alt="Seaborn Logo">
