--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     </div>
 
                    <div class="skill-item">
-                        <img src="./assets/google-looker-seeklogo.png" alt="Seaborn Logo">
+                        <img src="./assets/looker2.png" alt="Seaborn Logo">
                     </div>
                     <div class="skill-item">
                         <img src="./assets/github.png" alt="Seaborn Logo">
