--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             }
 
             .skills-ticker {
-                animation: ticker 15s linear infinite; /* Faster on mobile */
+                animation: ticker 30s linear infinite; /* Faster on mobile */
             }
         }
     </style>
@@ -278,6 +278,9 @@
                     </div>
                     <div class="skill-item">
                         <img src="./assets/sklearn.png" alt="Seaborn Logo">
+                    </div>
+                    <div class="skill-item">
+                        <img src="./assets/google-cloud.1024x823.png" alt="Seaborn Logo">
                     </div>
                     <!-- Duplicated set for seamless loop 
                     <div class="skill-item">
