--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="profile-text">
                 <p class="section-subtitle">Hello, I'm</p>
                 <h1 class="section-title">Ambuj Nayan Mishra</h1>
-                <h2 class="typewrite" data-period="2000" data-type='["Data Analyst", "Machine Learning Engineer"]'>
+                <h2 class="typewrite" data-period="2000" data-type='["Data Analyst", "Machine Learning Engineer","Data Scientist"]'>
                     <span class="wrap"></span>
                 </h2>
                 <div class="btn-container">
