--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
                     <div class="skill-item">
                         <img src="./assets/google-cloud.1024x823.png" alt="Seaborn Logo">
                     </div>
+                    <div class="skill-item">
+                        <img src="./assets/bigquery.1024x1024.png" alt="Seaborn Logo">
+                    </div>
                     <!-- Duplicated set for seamless loop 
                     <div class="skill-item">
                         <img src="./assets/python-logo.png" alt="Python Logo">
