--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <span class="wrap"></span>
                 </h2>
                 <div class="btn-container">
-                    <a href="./assets/Ambuj Resume.pdf" class="btn btn-color-1" download>Download Resume</a>
+                    <!-- <a href="./assets/Ambuj Resume.pdf" class="btn btn-color-1" download>Download Resume</a> -->
                     <a href="#contact" class="btn btn-color-2">Contact Me</a>
                     <div class="socials-container">
                         <a href="https://www.linkedin.com/in/ambuj-/" aria-label="LinkedIn Profile">
