--- a/index.html
+++ b/index.html
@@ -304,33 +304,49 @@
             </div>
         </div>
     </section>
-  <section id="about">
-    <p class="section-subtitle">Get to Know More</p>
-    <h2 class="section-title">About Me</h2>
-    <div class="about-container">
-      <div class="about-pic-container">
-        <img src="./assets/worker-2.png" alt="About me illustration" class="about-pic" />
-      </div>
-      <div class="about-details">
-        <div class="about-cards">
-          <div class="card">
-            <img src="./assets/experience.png" alt="Experience icon" class="icon" />
-            <h3>Experience</h3>
-            <p>Data Analyst<br />Machine Learning Intern<br />Data Science Intern</p>
-          </div>
-          <div class="card">
-            <img src="./assets/education.png" alt="Education icon" class="icon" />
-            <h3>Education</h3>
-            <p>M.C.A. Masters Degree<br />B.C.A. Bachelors Degree</p>
-          </div>
-        </div>
-        <div class="about-text">
-          <p>Data Analyst with a Master’s and Bachelor’s in Computer Applications, proficient in Python, SQL, Excel, and Power BI. Experienced in data science and machine learning through impactful internships, delivering projects like sales dashboards and predictive models. Certified in SQL, Python, and Machine Learning, I’m passionate about driving actionable insights and seeking opportunities to contribute to innovative data-driven projects.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+  <section id="about" class="about-section">
+  <p class="section-subtitle">Discover More</p>
+  <h2 class="section-title">About Me</h2>
 
+  <div class="about-content">
+    <div class="about-image-wrapper">
+      <img src="./assets/worker-2.png" alt="Professional illustration" class="about-main-pic" />
+    </div>
+
+    <div class="about-info">
+      <p class="about-description">
+        I'm a **Data Analyst** with a strong foundation in **Python, SQL, Excel, and Power BI**, backed by both a Master's and Bachelor's in Computer Applications. My passion lies in transforming raw data into actionable insights, and I thrive on contributing to innovative, data-driven projects.
+      </p>
+
+      <div class="about-highlights">
+        <div class="highlight-card">
+          <h3>Experience & Internships</h3>
+          <ul>
+            <li>**Data Analyst**</li>
+            <li>**Machine Learning Intern**</li>
+            <li>**Data Science Intern**</li>
+          </ul>
+        </div>
+        <div class="highlight-card">
+          <h3>Key Skills</h3>
+          <ul>
+            <li>**Programming:** Python (Pandas, NumPy, Scikit-learn)</li>
+            <li>**Databases:** SQL</li>
+            <li>**Data Visualization:** Excel, Power BI</li>
+            <li>**Concepts:** Machine Learning, Data Modeling</li>
+          </ul>
+        </div>
+        <div class="highlight-card">
+          <h3>Availability</h3>
+          <p>
+            I am available for new opportunities with a **2-week** notice period. Let's connect!
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
   <section id="experience">
     <p class="section-subtitle">Explore My</p>
     <h2 class="section-title">Experience</h2>
