--- a/index.html
+++ b/index.html
@@ -322,24 +322,24 @@
         <div class="highlight-card">
           <h3>Experience & Internships</h3>
           <ul>
-            <li>**Data Analyst**</li>
-            <li>**Machine Learning Intern**</li>
-            <li>**Data Science Intern**</li>
+            <li>Data Analyst**</li>
+            <li>Machine Learning Intern</li>
+            <li>Data Science Intern</li>
           </ul>
         </div>
         <div class="highlight-card">
           <h3>Key Skills</h3>
           <ul>
-            <li>**Programming:** Python (Pandas, NumPy, Scikit-learn)</li>
-            <li>**Databases:** SQL</li>
-            <li>**Data Visualization:** Excel, Power BI</li>
-            <li>**Concepts:** Machine Learning, Data Modeling</li>
+            <li>Programming: Python (Pandas, NumPy, Scikit-learn)</li>
+            <li>Databases: SQL</li>
+            <li>Data Visualization:Excel, Power BI</li>
+            <li>Concepts: Machine Learning, Data Modeling</li>
           </ul>
         </div>
         <div class="highlight-card">
           <h3>Availability</h3>
           <p>
-            I am available for new opportunities with a **2-week** notice period. Let's connect!
+            I am available for new opportunities with a 2-week notice period. Let's connect!
           </p>
         </div>
       </div>
