--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
 
     <div class="about-info">
       <p class="about-description">
-        I'm a **Data Analyst** with a strong foundation in **Python, SQL, Excel, and Power BI**, backed by both a Master's and Bachelor's in Computer Applications. My passion lies in transforming raw data into actionable insights, and I thrive on contributing to innovative, data-driven projects.
+        I'm a Data Analyst with a strong foundation in Python, SQL, Excel, and Power BI, backed by both a Master's and Bachelor's in Computer Applications. My passion lies in transforming raw data into actionable insights, and I thrive on contributing to innovative, data-driven projects.
       </p>
 
-      <div class="about-highlights">
+      <!-- <div class="about-highlights">
         <div class="highlight-card">
           <h3>Experience & Internships</h3>
           <ul>
@@ -342,7 +342,7 @@
             I am available for new opportunities with a 2-week notice period. Let's connect!
           </p>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </div>
