--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 <html lang="en">
 <head>
 
-
-
-
-
    <style>
         /* Profile Section */
         .profile-container {
@@ -315,7 +311,11 @@
 
     <div class="about-info">
       <p class="about-description">
-        I'm a Data Analyst with a strong foundation in Python, SQL, Excel, and Power BI, backed by both a Master's and Bachelor's in Computer Applications. My passion lies in transforming raw data into actionable insights, and I thrive on contributing to innovative, data-driven projects.
+        Data Analyst with 1+ years of experience in building data-driven dashboards and predictive machine learning models to solve real-world business problems. I specialize in transforming raw data into actionable insights using tools like Python, SQL, Looker Studio, Excel, and BigQuery.
+
+Currently working at Industrybuying.com, where I’ve developed customer segmentation models and built 20+ dashboards that improved team productivity by 20% and boosted ROI by 22%. I'm also experienced in developing ML pipelines and web apps using Flask, Streamlit, and FastAPI, and deploying solutions on Google Cloud Platform (GCP).
+
+My passion lies in leveraging data to uncover insights that drive business growth. I'm always eager to take on new challenges in analytics, machine learning, or MLOps.
       </p>
 
       <!-- <div class="about-highlights">
