--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ My passion lies in leveraging data to uncover insights that drive business growt
         <p>Issued by: CodeChef</p>
       </div>
       <div class="certificate-card">
-        <img src="./assets/python-zero-to-mastery.jpg" alt="Python Zero to Mastery Certificate" class="certificate-img" />
+        <img src="./assets/python zero to mastery.jpg" alt="Python Zero to Mastery Certificate" class="certificate-img" />
         <h3>Python Zero to Mastery</h3>
         <p>Issued by: Zero to Mastery</p>
       </div>
